reporte de personal

--- a/src/Frontend/CorresponsaliaBundle/Resources/views/Cobertura/new.html.twig
+++ b/src/Frontend/CorresponsaliaBundle/Resources/views/Cobertura/new.html.twig
@@ -25,7 +25,7 @@
         {{ form_widget(form._token) }}
         <div class="formShow" style="width:70%;">
             <div class="contenedorform">
-                <div class="labelform">Dqescripcion:</div>
+                <div class="labelform">Descripcion:</div>
                 <div class="widgetform">{{ form_widget(form.descripcion) }}</div>
             </div>
         </div>
