rol personal consulta rama lyz

--- a/src/Frontend/CorresponsaliaBundle/Resources/views/Personal/show.html.twig
+++ b/src/Frontend/CorresponsaliaBundle/Resources/views/Personal/show.html.twig
@@ -61,13 +61,17 @@
             </div>
         {% endif %}
     </div>
-    <a class="btn btn-default" href="{{ path('personal_edit', { 'id': entity.id }) }}">IR A EDITAR</a> | 
+    {% if is_granted('ROLE_PERSONAL') or is_granted('ROLE_SUPERADMIN') %}
+        <a class="btn btn-default" href="{{ path('personal_edit', { 'id': entity.id }) }}">IR A EDITAR</a>|
+    {% endif %} 
     <a class="btn btn-default" href="{{ path('personal') }}">IR AL LISTADO</a>
     
     <BR><BR>
-    {{ form_start(delete_form, { 'attr': {'onsubmit': 'return confirm("¿Seguro que deseas eliminar?")'} }) }}
-        {{ form_errors(delete_form) }}
-        {{ form_row(delete_form.submit, { 'attr': {'class': 'btn btn-danger'} }) }}
-    {{ form_end(delete_form) }}
+    {% if is_granted('ROLE_PERSONAL') or is_granted('ROLE_SUPERADMIN') %}
+        {{ form_start(delete_form, { 'attr': {'onsubmit': 'return confirm("¿Seguro que deseas eliminar?")'} }) }}
+            {{ form_errors(delete_form) }}
+            {{ form_row(delete_form.submit, { 'attr': {'class': 'btn btn-danger'} }) }}
+        {{ form_end(delete_form) }}
+    {% endif %}
    
 {% endblock %}
