--- a/src/Frontend/CorresponsaliaBundle/Resources/views/Personal/index.html.twig
+++ b/src/Frontend/CorresponsaliaBundle/Resources/views/Personal/index.html.twig
@@ -34,9 +34,11 @@
                 <td> {{ entity.corresponsaliaId }}</td>
                 <td>
                     <a href="{{ path('personal_show', { 'id': entity.id }) }}" data-toggle="tooltip" data-placement="top" title="Detalle de Personal"><b class="glyphicon glyphicon-eye-open"></b></a>
-                    <a href="{{ path('personal_edit', { 'id': entity.id }) }}"><b class="glyphicon glyphicon-edit" data-toggle="tooltip" data-placement="top" title="Editar Personal"></b></a>
-                    {% if entity.archivo == NULL %}
-                        <a href="{{ path('personal_pasaporte', { 'id': entity.id }) }}" data-toggle="tooltip" data-placement="top" title="Cargar Pasaporte"><b class="glyphicon glyphicon-cloud-upload"></b></a>
+                    {% if is_granted('ROLE_PERSONAL') or is_granted('ROLE_SUPERADMIN') %}
+                        <a href="{{ path('personal_edit', { 'id': entity.id }) }}"><b class="glyphicon glyphicon-edit" data-toggle="tooltip" data-placement="top" title="Editar Personal"></b></a>
+                        {% if entity.archivo == NULL %}
+                            <a href="{{ path('personal_pasaporte', { 'id': entity.id }) }}" data-toggle="tooltip" data-placement="top" title="Cargar Pasaporte"><b class="glyphicon glyphicon-cloud-upload"></b></a>
+                        {% endif %}
                     {% endif %}
                 </td>
             </tr>
@@ -44,7 +46,9 @@
         </tbody>
     </table>
     <br><br><br>
-    <a class="btn btn-primary" href="{{ path('personal_new') }}">NUEVO PERSONAL</a><br>
+    {% if is_granted('ROLE_PERSONAL') or is_granted('ROLE_SUPERADMIN') %}
+        <a class="btn btn-primary" href="{{ path('personal_new') }}">NUEVO PERSONAL</a><br>
+    {% endif %}
     <script>
         $(document).ready(function(){
             $('#tablalista').dataTable( { //CONVERTIMOS NUESTRO LISTADO DE LA FORMA DEL JQUERY.DATATABLES- PASAMOS EL ID DE LA TABLA
