--- a/src/Frontend/CorresponsaliaBundle/Resources/views/Documento/new.html.twig
+++ b/src/Frontend/CorresponsaliaBundle/Resources/views/Documento/new.html.twig
@@ -12,6 +12,15 @@
     
 {% block body -%}
     {{ parent() }}
+    
+    {% if form_errors(form.file) or form_errors(form.descripcion) %}
+    <div class="alert alert-danger errores" style="width:70%;">
+        <div><b>Alerta! Ha ocurrido un error en el formulario:</b><br><br></div>
+        <div>{{ form_errors(form.file) }}</div>
+        <div>{{ form_errors(form.descripcion) }}</div>
+    </div>
+    {% endif %}
+    
 
     <form novalidate action="{{ path('documento_create',{'corresponsalia':corresponsalia}) }}" method="post" {{ form_enctype(form) }}>
 	{{ form_widget(form._token) }}
