--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -23,6 +23,9 @@
               })();
             </script>
             <noscript><p><img src="http://10.10.4.237/piwik/piwik.php?idsite=2" style="border:0;" alt="" /></p></noscript>
+<!-- Piwik Image Tracker-->
+<img src="http://10.10.4.237/piwik/piwik.php?idsite=2&rec=1" style="border:0" alt="" />
+<!-- End Piwik -->
             <!-- End Piwik Code -->
 
         {% endblock %}
